// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingElastic is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingElastic euiLoadingElastic--medium testClass1 testClass2 css-1gqpwx6-euiLoadingElastic"
  data-test-subj="test subject string"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size l is rendered 1`] = `
<span
  class="euiLoadingElastic euiLoadingElastic--large css-1gqpwx6-euiLoadingElastic"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size m is rendered 1`] = `
<span
  class="euiLoadingElastic euiLoadingElastic--medium css-1gqpwx6-euiLoadingElastic"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size xl is rendered 1`] = `
<span
  class="euiLoadingElastic euiLoadingElastic--xLarge css-1gqpwx6-euiLoadingElastic"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size xxl is rendered 1`] = `
<span
  class="euiLoadingElastic euiLoadingElastic--xxLarge css-1gqpwx6-euiLoadingElastic"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;
